<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/image_border"
        android:cropToPadding="true"
        android:padding="5dp"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/tv_result_description"
        android:visibility="gone"
        android:background="@color/PictureSpeaker_colorPrimary"
        android:textColor="@color/PictureSpeaker_colorGrey"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:textSize="18sp"
        android:text="@string/allow_to_save_photos_setup_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sw_voice_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/voice_setup_female_title"
        android:textOff="Мужской"
        android:textOn="Женский"
        android:textSize="16sp"
        android:theme="@style/SwitchCompatVoiceType"/>

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/sw_language_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:checked="true"
        android:text="@string/language_setup_title"
        android:textOff="EN"
        android:textOn="RU"
        android:textSize="16sp"
        android:theme="@style/SwitchCompatVoiceType"/>

    <Button
        android:id="@+id/btn_next"
        style="@style/PictureSpeaker_start_btn_makePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_recognize"/>

</LinearLayout>